--- a/ArchivosProyectoSAD/config_T.json
+++ b/ArchivosProyectoSAD/config_T.json
@@ -31,7 +31,7 @@
   "dataset":"tripadvisor_hotel_reviews.csv",
   "model":"knn.pkl",
   "mode": "train",
-  "algorithm": "naive_bayes",
+  "algorithm": "random_forest",
   "test_size": 0.2,
   "dev_size": 0.1,
   "metrics": ["accuracy", "precision", "recall", "fscore"],
